// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiFormControlLayout is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiFormControlLayout testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <input />
  </div>
</div>
`;

exports[`OuiFormControlLayout props clear onClick is rendered 1`] = `
<div
  class="ouiFormControlLayout"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <div
      class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
    >
      <button
        aria-label="Clear input"
        class="ouiFormControlLayoutClearButton customClass"
        data-test-subj="clearButton"
        type="button"
      >
        <span
          class="ouiFormControlLayoutClearButton__icon"
          data-ouiicon-type="cross"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`OuiFormControlLayout props fullWidth is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--fullWidth"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  />
</div>
`;

exports[`OuiFormControlLayout props icon is rendered as a string 1`] = `
<div
  class="ouiFormControlLayout"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="alert"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiFormControlLayout props icon is rendered as an object 1`] = `
<div
  class="ouiFormControlLayout"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon customClass"
        data-test-subj="myIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="alert"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiFormControlLayout props icon side left is rendered 1`] = `
<div
  class="ouiFormControlLayout"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <div
      class="ouiFormControlLayoutIcons"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="alert"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiFormControlLayout props icon side right is rendered 1`] = `
<div
  class="ouiFormControlLayout"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <div
      class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
    >
      <span
        class="ouiFormControlLayoutCustomIcon"
      >
        <span
          aria-hidden="true"
          class="ouiFormControlLayoutCustomIcon__icon"
          data-ouiicon-type="alert"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`OuiFormControlLayout props isLoading is rendered 1`] = `
<div
  class="ouiFormControlLayout"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  >
    <div
      class="ouiFormControlLayoutIcons ouiFormControlLayoutIcons--right"
    >
      <span
        class="ouiLoadingSpinner ouiLoadingSpinner--medium"
      />
    </div>
  </div>
</div>
`;

exports[`OuiFormControlLayout props multiple appends are rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--group"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  />
  <span
    class="ouiFormControlLayout__append"
  >
    1
  </span>
  <span
    class="ouiFormControlLayout__append"
  >
    2
  </span>
</div>
`;

exports[`OuiFormControlLayout props multiple prepends are rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--group"
>
  <span
    class="ouiFormControlLayout__prepend"
  >
    1
  </span>
  <span
    class="ouiFormControlLayout__prepend"
  >
    2
  </span>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  />
</div>
`;

exports[`OuiFormControlLayout props one append node is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--group"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  />
  <span
    class="ouiFormControlLayout__append"
  >
    1
  </span>
</div>
`;

exports[`OuiFormControlLayout props one append string is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--group"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  />
  <label
    class="ouiFormLabel ouiFormControlLayout__append"
  >
    1
  </label>
</div>
`;

exports[`OuiFormControlLayout props one prepend node is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--group"
>
  <span
    class="ouiFormControlLayout__prepend"
  >
    1
  </span>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  />
</div>
`;

exports[`OuiFormControlLayout props one prepend node is rendered with className 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--group"
>
  <span
    class="ouiFormControlLayout__prepend myClass"
  >
    1
  </span>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  />
</div>
`;

exports[`OuiFormControlLayout props one prepend string is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--group"
>
  <label
    class="ouiFormLabel ouiFormControlLayout__prepend"
  >
    1
  </label>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  />
</div>
`;

exports[`OuiFormControlLayout props readOnly is rendered 1`] = `
<div
  class="ouiFormControlLayout ouiFormControlLayout--readOnly"
>
  <div
    class="ouiFormControlLayout__childrenWrapper"
  />
</div>
`;
